[package]
name = "fetchfs"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
hex = "0.4"
httpdate = "1.0"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.16", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.16", features = ["libfuse"] }

[dev-dependencies]
serial_test = "3.1"
tempfile = "3.12"

[profile.release]
panic = "abort"
